--- a/SEDC.Lottery/Lottery.WebAPI.Tests/Lottery.WebAPI.Tests.csproj
+++ b/SEDC.Lottery/Lottery.WebAPI.Tests/Lottery.WebAPI.Tests.csproj
@@ -62,6 +62,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Lottery.WebAPI\Lottery.WebAPI.csproj">
+      <Project>{5AD5C610-E1E9-4B52-9070-C18E3074680C}</Project>
+      <Name>Lottery.WebAPI</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
