--- a/SEDC.Lottery/Lottery.Data.Model/Lottery.Data.Model.csproj
+++ b/SEDC.Lottery/Lottery.Data.Model/Lottery.Data.Model.csproj
@@ -53,7 +53,7 @@
     <Compile Include="LotteryContext.cs" />
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RuffledType.cs" />
+    <Compile Include="RaffledType.cs" />
     <Compile Include="UserCode.cs" />
     <Compile Include="UserCodeAward.cs" />
   </ItemGroup>
