--- a/SEDC.Lottery/Lottery.Service/Lottery.Service.csproj
+++ b/SEDC.Lottery/Lottery.Service/Lottery.Service.csproj
@@ -52,8 +52,11 @@
   <ItemGroup>
     <Compile Include="ILotteryManager.cs" />
     <Compile Include="IoC.Autofac\ServiceModule.cs" />
+    <Compile Include="LotteryManagerV0.cs" />
     <Compile Include="LotteryManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UoW\IUnitOfWork.cs" />
+    <Compile Include="UoW\UnitOfWork.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Lottery.Data.Model\Lottery.Data.Model.csproj">
