--- a/SEDC.Lottery/Lottery.WebAPI/Web.config
+++ b/SEDC.Lottery/Lottery.WebAPI/Web.config
@@ -11,6 +11,7 @@
   <appSettings></appSettings>
   <connectionStrings>
     <add name="LotteryDb" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=LotteryDb; Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <!--<add name="LotteryDb" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=LotteryDb; Integrated Security=False; User ID=Lottery; Password=Pa$$w0rd; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />--> <!--User Id=Lottery@servername-->
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
