--- a/SEDC.Lottery/Lottery.WebAPI/Web.config
+++ b/SEDC.Lottery/Lottery.WebAPI/Web.config
@@ -10,8 +10,8 @@
   </configSections>
   <appSettings></appSettings>
   <connectionStrings>
-    <add name="LotteryDb" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=LotteryDb; Integrated Security=True;" providerName="System.Data.SqlClient" />
-    <!--<add name="LotteryDb" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=LotteryDb; Integrated Security=False; User ID=Lottery; Password=Pa$$w0rd; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />--> <!--User Id=Lottery@servername-->
+    <!--<add name="LotteryDb" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=LotteryDb; Integrated Security=True;" providerName="System.Data.SqlClient" />-->
+    <add name="LotteryDb" connectionString="Data Source=PETRA04; Initial Catalog=LotteryDb; Integrated Security=False; User ID=Lottery; Password=Pa$$w0rd; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" /> <!--User Id=Lottery@servername-->
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
