--- a/Lottery.RaffleConsole/Lottery.RaffleConsole/appsettings.json
+++ b/Lottery.RaffleConsole/Lottery.RaffleConsole/appsettings.json
@@ -1,6 +1,8 @@
 ﻿{
   "ConnectionStrings": {
     "LotteryDatabase": "Data Source=PETRA04;Initial Catalog=LotteryDb;User ID=Lottery;Password=Pa$$w0rd"
+    //"LotteryDatabase": "Data Source=PETRA04; Initial Catalog=LotteryDb; Integrated Security=False; User ID=Lottery; Password=Pa$$w0rd; MultipleActiveResultSets=True"
+    //"LotteryDatabase": "Data Source=(localdb)\\MSSQLLocalDB; Initial Catalog=LotteryDb; Integrated Security=False;"
   },
   "FinalRaffle": " 2018-09-30"
 }
