--- a/Lottery.RaffleConsole/Lottery.Service/Lottery.Service.csproj
+++ b/Lottery.RaffleConsole/Lottery.Service/Lottery.Service.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="EPPlus.Core" Version="1.5.4" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Lottery.Data.Model\Lottery.Data.Model.csproj" />
     <ProjectReference Include="..\Lottery.Data\Lottery.Data.csproj" />
   </ItemGroup>
