--- a/Lottery.RaffleConsole/Lottery.Service/Lottery.Service.csproj
+++ b/Lottery.RaffleConsole/Lottery.Service/Lottery.Service.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="EPPlus.Core" Version="1.5.4" />
+    <PackageReference Include="WindowsAzure.Storage" Version="9.3.2" />
   </ItemGroup>
 
   <ItemGroup>
